--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -7,9 +7,9 @@
     </style>
     <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
       <item name="android:windowBackground">@drawable/background_splash</item>
-      <item name="android:statusBarColor">@color/blue</item>
+      <item name="android:statusBarColor">@color/background</item>
     </style>
     <style name="SplashStatusBarTheme" parent="SplashScreen_SplashTheme">
-      <item name="android:statusBarColor">@color/blue</item>
+      <item name="android:statusBarColor">@color/background</item>
     </style>
 </resources>
